<resources>
    <string name="app_name">SchoolSchedule</string>

    <string name="schedule">Schedule</string>

    <string name="monday">Monday</string>
    <string name="mon">Mon</string>
    <string name="tuesday">Tuesday</string>
    <string name="tue">Tue</string>
    <string name="wednesday">Wednesday</string>
    <string name="wed">Wed</string>
    <string name="thursday">Thursday</string>
    <string name="thu">Thu</string>
    <string name="friday">Friday</string>
    <string name="fri">Fri</string>
    <string name="saturday">Saturday</string>
    <string name="sat">Sat</string>

    <string name="create_schedule">Create schedule</string>

    <string name="lessons_count">Lessons count: </string>
    <string name="enter">Enter</string>

    <string name="supplies_hint">Specify accessories for the lesson:</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
</resources>