<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DailySchedule">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/justText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supplies_hint"
            android:textSize="@dimen/general_text_size"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/school_supply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/general_text_size"
            app:layout_constraintTop_toBottomOf="@+id/justText" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/school_supply"
            tools:context=".view.MainActivity">

            <ListView
                android:id="@+id/listView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:descendantFocusability="beforeDescendants" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/button_text_size"
                android:backgroundTint="@color/button_color"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/buttonRemove"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/button_text_size"
                android:backgroundTint="@color/button_color"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1">

            <Button
                android:id="@+id/buttonPrev"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/button_text_size"
                android:backgroundTint="@color/button_color"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/button_text_size"
                android:backgroundTint="@color/button_color"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>